News
Last revised: March 08, 2002
  ________________________________________________________________________

What's new? First, read the following documents:

     INSTALL
     README
     BOTNET
     UPDATES1.6
     tcl-commands.doc

All of these documents combined will fill you in on the latest changes to
Eggdrop in version 1.6.x. All files, with the exception of UPDATES1.6, are
also available in html format in doc/html/.

A lot of things have changed in this version, so at a minimum, read the
UPDATES1.6 text file. UPDATES shows what's been added and fixed along the
way.

If you are upgrading from a pre-1.6 version of Eggdrop:

     1. Before you start the bot for the first time, BACKUP your userfile.

     2. DON'T USE YOUR OLD CONFIG FILE. MAKE A NEW ONE!

Changes made to Eggdrop 1.6.x from Eggdrop1.4.x:

  !CHANNELS

     Support for IRCnet !channels was added to Eggdrop. This might still be
     a bit buggy. We appreciate bug reports!

  +/-NODESYNCH

     This new channel setting replaces the old 'allow-desync' config file
     setting. It is useful if you use some type of ChanServ or if you don't
     care about your channel being desynched.

  ASYNCHRONOUS DNS MODULE

     Eggdrop 1.6 is shipped with a new module, the dns module. It replaces
     those old dns-lookups performed by Eggdrop which could halt the whole
     bot during a timeout. We also added a new Tcl command, 'dnslookup', so
     scripts can now use DNS functions asynchronously, too. See
     doc/settings/mod.dns for more information.

  COMPRESS MODULE

     A new module called compress was introduced to Eggdrop. It provides
     gzip support to Eggdrop (via Tcl commands) and enables compressed
     userfile transfer. See doc/settings/mod.compress for more information.

  SHARE MODULE

     The share module has a new setting now (override-bots) which allows
     hub bots to override the leaf bots' bot settings (botaddress, telnet