@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<!-- $Id: news.html,v 1.16 2002/03/09 21:14:15 wcc Exp $ -->
+<!-- $Id: news.html,v 1.17 2002/05/20 00:51:27 wcc Exp $ -->
 
 <html>
   <head>
@@ -286,6 +286,11 @@
 
         <li>
           <p>The CTCP bind type now supports wildcards.</p>
+        </li>
+
+        <li>
+          <p>The &#39;channel get&#39; command was added to allow channel
+          settings to be easily retrieved.</p>
         </li>
 
         <li>
